# my.telegra.ph

./: .gitignore  Caddyfile  Dockerfile  Dockerfile-celery  README.md  docker-compose.yml  example.env  main.py  pyproject-celery.toml  pyproject.toml  todo.md
app/: main.py  tasks.py  worker.py
app/api/: main_page.py  others.py  page.py  seo.py
app/config/: __init__.py  consts.py
app/config/db/: postgresdb.py  sqlitedb.py
app/db/models/: __init__.py
app/db/models/base/: declarative.py  timestamp.py
app/db/models/page/: __init__.py  page.py
app/schemas/: page.py
app/secure/: __init__.py  authorization.py
app/setup/: __init__.py  db.py  exceptions.py  log.py
app/templates/: 404.html  base.html  main_page.html
app/templates/base_template/: base.html  modal.html  navbar.html
app/templates/base_template/modals/: about.html  contact.html
app/templates/main_page/: base.html  includes.html  index.html  other_posts.html  pagination.html  top_post.html
app/templates/post/: includes.html  index.html  post.html
app/templates/static/css/: main.page.css  quill.core.min.css
app/templates/static/js/: vue.global.prod.js
app/test/: test_api_page.py
app/utils/: __init__.py  index_now.py  jinja.py  seo.py  text_conversion.py
