[tool.poetry]
name = "my-telegra-ph"
version = "0.1.0"
description = ""
authors = ["fedorov0av <fedorov0av@gmail.com>"]
readme = "README.md"
#packages = [{include = "my"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.6"}
jinja2 = "^3.1.4"
transliterate = "^1.10.2"
loguru = "^0.7.3"
sqlalchemy = "^2.0.36"
sqlalchemy-utils = "^0.41.2"
aiosqlite = "^0.20.0"
uvicorn = "^0.32.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
