[tool.poetry]
name = "my-telegra-ph"
version = "0.1.0"
description = ""
authors = ["fedorov0av <fedorov0av@gmail.com>"]
readme = "README.md"
#packages = [{include = "my"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.6"}
jinja2 = "^3.1.4"
transliterate = "^1.10.2"
loguru = "^0.7.3"
sqlalchemy = "^2.0.36"
sqlalchemy-utils = "^0.41.2"
aiosqlite = "^0.20.0"
uvicorn = "^0.32.1"
python-dotenv = "^1.0.1"
asyncpg = "^0.30.0"
html-utils = {git = "https://github.com/fedorov0av/html-utils.git", rev = "v0.1.0"}
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
requests = "^2.32.3"
indexflow = {git = "https://github.com/fedorov0av/IndexFlow.git", rev = "v0.1.1"}
celery = "^5.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
